fixed transform scale entry preview z-index

--- a/src/styles/components/_tarot-alert.scss
+++ b/src/styles/components/_tarot-alert.scss
@@ -1,4 +1,5 @@
 .tarot-alert-overlay {
+    z-index:999;
     position:fixed;
     top:0;
     left:0;
